# ytaudio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
config/: default.toml
crates/ytaudio-cli/: Cargo.toml
crates/ytaudio-cli/src/: args.rs  main.rs
crates/ytaudio-cli/src/commands/: batch.rs  config.rs  doctor.rs  extract.rs  mod.rs  update_models.rs
crates/ytaudio-core/: Cargo.toml
crates/ytaudio-core/src/: config.rs  decoder.rs  downloader.rs  encoder.rs  error.rs  lib.rs  metadata.rs  normalizer.rs  pipeline.rs
crates/ytaudio-upscale/: Cargo.toml
crates/ytaudio-upscale/src/: audiosr.rs  error.rs  flashsr.rs  lib.rs
python/: requirements.txt
scripts/: install-deps.sh
