[workspace]
resolver = "2"
members = [
    "crates/ytaudio-cli",
    "crates/ytaudio-core",
    "crates/ytaudio-upscale",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["terminals.tech <29216465+wheattoast11@users.noreply.github.com>"]
repository = "https://github.com/wheattoast11/ytaudio"
homepage = "https://terminals.tech"
description = "YouTube audio extraction with neural upscaling"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive", "env", "string"] }
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
tempfile = "3.9"
regex = "1.10"
which = "6.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }

# Internal crates
ytaudio-core = { path = "crates/ytaudio-core" }
ytaudio-upscale = { path = "crates/ytaudio-upscale" }
