[package]
name = "ytaudio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "YouTube audio extraction CLI with neural upscaling"

[[bin]]
name = "ytaudio"
path = "src/main.rs"

[dependencies]
ytaudio-core.workspace = true
ytaudio-upscale.workspace = true

tokio.workspace = true
futures.workspace = true
clap.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
which.workspace = true
