[package]
name = "ytaudio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core pipeline for ytaudio"

[dependencies]
ytaudio-upscale.workspace = true

tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
figment.workspace = true
dirs.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tempfile.workspace = true
regex.workspace = true
which.workspace = true
chrono.workspace = true
uuid.workspace = true
