[package]
name = "ytaudio-upscale"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neural audio upscaling bridge for ytaudio"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true
which.workspace = true
